--- a/.docker/php-7.4/php.ini
+++ b/.docker/php-7.4/php.ini
@@ -1,5 +1,23 @@
 [PHP]
-post_max_size = 100M
-upload_max_filesize = 100M
+max_input_vars = 10000
+max_file_uploads = 100
+max_execution_time = 300
+post_max_size = 1024M
+upload_max_filesize = 1024M
+pcre.backtrack_limit = 1000000
+pcre.recursion_limit = 14000
+realpath_cache_size = 4096k
 variables_order = EGPCS
+
+; Bitrix required
 mbstring.func_overload=0
+short_open_tag = On
+date.timezone = UTC
+
+; Configure PHP sessions
+session.entropy_length = 128
+session.entropy_file = /dev/urandom
+session.cookie_httponly = On
+
+[opcache]
+opcache.revalidate_freq = 0
