--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   workspace:
     build:
-      context: ./.docker/php-7.4
+      context: ./.docker/php-${PHP_VERSION:-7.4}
       dockerfile: Dockerfile
       args:
         WWWGROUP: '${WWWGROUP:-1000}'
@@ -13,7 +13,7 @@ services:
     ports:
       - '${APP_PORT:-80}:80'
     volumes:
-      - '.:/var/www/html'
+      - './www:/var/www/html'
       - './.docker/logs/php:/var/log/apache2'
     networks:
       - bitrix
