--- a/docker/php-7.4/php.ini
+++ b/docker/php-7.4/php.ini
@@ -20,14 +20,21 @@ variables_order = EGPCS
 mbstring.func_overload=0
 mbstring.internal_encoding = "UTF-8"
 
-extension = mcrypt
-
 session.entropy_length = 128
 session.entropy_file = /dev/urandom
 session.cookie_httponly = On
 session.use_trans_sid = 0
 session.gc_maxlifetime = 10800
 session.cookie_lifetime = 10800
+
+enable_dl = Off
+allow_url_fopen = On
+
+# Security headers
+mail.add_x_header = Off
+expose_php = Off
+
+default_charset = UTF-8
 
 [opcache]
 opcache.revalidate_freq = 0
