--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,37 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
 services:
-  workspace:
+  php:
     build:
-      context: ./.docker/php-${PHP_VERSION:-7.4}
+      context: ./docker/php-${PHP_VERSION:-7.4}
       dockerfile: Dockerfile
       args:
         WWWGROUP: '${WWWGROUP:-1000}'
         WWWUSER: '${WWWUSER:-1000}'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
+    expose:
+      - "9000"
+    volumes:
+      - './www:/var/www'
+      - './docker/logs/php:/var/log/php'
+    networks:
+      - bitrix
+  nginx:
+    build:
+      context: ./docker/nginx
+      dockerfile: Dockerfile
+      args:
+        WWWGROUP: '${WWWGROUP:-1000}'
+        WWWUSER: '${WWWUSER:-1000}'
+    depends_on:
+      - php
+      - mysql
     ports:
       - '${APP_PORT:-80}:80'
     volumes:
-      - './www:/var/www/html'
-      - './.docker/logs/php:/var/log/apache2'
+      - './www:/var/www'
+      - './docker/logs/nginx:/var/log/nginx'
     networks:
       - bitrix
   mysql:
@@ -30,10 +47,11 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
     volumes:
       - 'db-mysql:/var/lib/mysql'
+      - './docker/mysql/my.cnf:/etc/mysql/my.cnf'
     networks:
       - bitrix
     healthcheck:
-      test: ['CMD', 'mysqladmin', 'ping', '-p${DB_PASSWORD}']
+      test: [ 'CMD', 'mysqladmin', 'ping', '-p${DB_PASSWORD}' ]
       retries: 3
       timeout: 5s
 
