--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -1,14 +1,10 @@
 [mysqld]
-transaction-isolation = READ-COMMITTED
-innodb_flush_log_at_trx_commit = 2
-innodb_flush_method = O_DIRECT
-thread_cache_size = 4
-
-skip_external_locking = 1
-table_open_cache_instances=16
-
-max_connections=20
-max_user_connections=19
-wait_timeout=10
-interactive_timeout = 60
-long_query_time=5
+default-time-zone="+03:00"
+innodb_file_per_table=1
+innodb_flush_log_at_trx_commit=2
+sync_binlog=0
+# Try to replace O_DIRECT by O_DSYNC if you have "Operating system error number 22"
+innodb_flush_method=O_DIRECT
+transaction-isolation=READ-COMMITTED
+binlog_cache_size=0
+sql_mode=""
