--- a/docker/php-7.4/overrides.conf
+++ b/docker/php-7.4/overrides.conf
@@ -25,3 +25,8 @@ decorate_workers_output = no
 
 ; Required to allow config-by-environment
 clear_env = no
+
+pm = dynamic
+pm.max_children = 20
+pm.min_spare_servers = 1
+pm.max_spare_servers = 3
