--- a/docker/nginx/conf/default.conf
+++ b/docker/nginx/conf/default.conf
@@ -1,8 +1,15 @@
 server {
-    listen 80 deferred reuseport default;
-    listen [::]:80 deferred reuseport default;
 
-    server_name bitrix;
+    listen 80 default_server;
+    listen [::]:80 default_server ipv6only=on;
+
+    # For https
+    # listen 443 ssl default_server;
+    # listen [::]:443 ssl default_server ipv6only=on;
+    # ssl_certificate /etc/nginx/ssl/default.crt;
+    # ssl_certificate_key /etc/nginx/ssl/default.key;
+
+    server_name localhost;
     charset utf-8;
     root /var/www;
     index index.php index.html bitrixsetup.php;
@@ -10,8 +17,11 @@ server {
     access_log /var/log/nginx/bitrix-access.log;
     error_log /var/log/nginx/bitrix-error.log;
 
-    # bitrix recommendation, respect server's mime-type and don't try to guess it
-    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+
+    disable_symlinks off;
 
     if (!-e $request_filename) {
        rewrite  ^(.*)$  /bitrix/urlrewrite.php last;
@@ -27,48 +37,11 @@ server {
     }
 
     location / {
-        if (-f /var/www/index.php) {
-            root /var/www;
-            break;
-        }
-        if (-f /var/www/bitrixsetup.php) {
-            root /var/www;
-            break;
-        }
-        try_files $uri $uri/ @bitrix;
-        root  /var/www/html;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    location @bitrix {
-        fastcgi_pass php-upstream;
-        include fastcgi_params;
-        # make SERVER_NAME behave same as HTTP_HOST
-        fastcgi_param SERVER_NAME $host;
-        fastcgi_param SCRIPT_FILENAME $document_root/bitrix/urlrewrite.php;
-    }
-
-    location = /restore.php {
-        include fastcgi_params;
-        fastcgi_pass php-upstream;
-        fastcgi_index index.php;
-        fastcgi_send_timeout 21600;
-        fastcgi_read_timeout 21600;
-        # make SERVER_NAME behave same as HTTP_HOST
-        fastcgi_param SERVER_NAME $host;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        client_body_buffer_size 1024m;
-        client_max_body_size 1024m;
-    }
-
-    location = /favicon.png {
-        log_not_found off;
-        access_log off;
-    }
-
-    location = /robots.txt {
-        log_not_found off;
-        access_log off;
-    }
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
 
     location ~ (/\.ht|/\.git|/\.gitignore|\.settings\.php|/composer|/bitrix/backup|/bitrix/updates|/bitrix/modules|/bitrix/php_interface|/bitrix/stack_cache|/bitrix/managed_cache|/bitrix/html_pages/\.|/upload/1c_exchange|local/modules|local/php_interface|/logs/) {
         deny all;
@@ -94,11 +67,7 @@ server {
         client_max_body_size 1024m;
     }
 
-    location ~ \.php$ {
-        # redirect index.php to page without it
-        if ($request_uri ~* "^(.*/)index\.php$") {
-            return 301 $1;
-        }
+    location = /restore.php {
         include fastcgi_params;
         fastcgi_pass php-upstream;
         fastcgi_index index.php;
@@ -106,14 +75,37 @@ server {
         fastcgi_read_timeout 21600;
         # make SERVER_NAME behave same as HTTP_HOST
         fastcgi_param SERVER_NAME $host;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        client_body_buffer_size 1024m;
+        client_max_body_size 1024m;
     }
 
-    error_page 404 /404.html;
+    location ~ \.php$ {
+        include fastcgi_params;
+        try_files $uri /index.php =404;
+        fastcgi_pass php-upstream;
+        fastcgi_index index.php;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_send_timeout 21600;
+        fastcgi_read_timeout 21600;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+    }
+
+    location ~ /\.ht {
+        deny all;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/letsencrypt/;
+        log_not_found off;
+    }
+
+    error_page 404 /index.php;
 
     location = /404.html {
-        internal;
-        access_log off;
-        return 404;
-    }
+         internal;
+         access_log off;
+         return 404;
+     }
 }
